--- a/package.json
+++ b/package.json
@@ -11,7 +11,14 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/express": "^4.17.13",
     "tslint": "^6.1.3",
     "typescript": "^4.6.3"
+  },
+  "dependencies": {
+    "colors": "^1.4.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.0",
+    "express": "^4.17.3"
   }
 }
